--- a/Card-layout/layout-1/css/ccl0002.css
+++ b/Card-layout/layout-1/css/ccl0002.css
@@ -1,3 +1,4 @@
+/*icon-link:https://www.flaticon.com/search?word=envelope&style_id=1*/
 *{
   margin: 0;
   padding: 0%;
@@ -24,31 +25,53 @@ html,body {
 }
 
 .top {
-  /* box-shadow: 0px -15px 10px -15px rgb(224, 221, 9); */
-   box-shadow: 0px -15px 24px 5px #000;
+   box-shadow: 0px 12px 24px 5px #090708;
 }
 
 .bottom {
- box-shadow: 0px 15px 24px 5px #000; 
+ box-shadow: 0px -8px 24px 5px #090708; 
 }
 
+
+
 .top-right-line {
-  height: 6px;
+  height: 5px;
   width: 990px;
   /* box-shadow: 10px -10px 17px #f7be06; */
-    background: linear-gradient(to right, rgba(153, 112, 44, 100), rgba(153, 112, 44, 100));
+    background: linear-gradient(90deg, rgba(150,71,5,1) 0%, rgba(157,85,13,1)15%, rgba(255,158,21,1)60%,rgba(250,253,60,1)80%,rgba(254,169,62,1) 90%,rgba(239,167,65,1)100%);
   transform: translateX(-303px) rotate(45deg);
+  position: relative;
 }
+
+.dots {
+  height: 260px;
+  background-image: radial-gradient(#da9226 20%, transparent 30%),
+    radial-gradient(#5b4138 20%, transparent 30%);
+  background-size: 12px 12px;
+  background-position: 0 0, 30px 48px;
+  transform: translateY(-260px);
+}
+
+.bottom-dots {
+  height: 250px;
+  background-image: radial-gradient(#da9226 20%, transparent 30%),
+  radial-gradient(#5b4138 20%, transparent 30%);
+  background-size: 12px 12px;
+  background-position: 0 0, 30px 52px;
+  background-size: 12px 12px;
+  
+}
+
 .bottom-left-line {
-  height: 6px;
+  height: 5px;
   width: 706px;
   /* box-shadow: 10px 10px 17px #f7be06; */
-  background: linear-gradient(to right, rgba(153, 112, 44, 100), rgba(153, 112, 44, 100));
+  background: linear-gradient(90deg, rgba(150,71,5,1) 0%, rgba(157,85,13,1)10%, rgba(255,158,21,1)40%,rgba(250,253,60,1)50%,rgba(254,169,62,1) 70%,rgba(239,167,65,1)100%);
   transform: translateX(-117px) rotate(45deg);
 }
  
 .center-content {
-  padding: 240px 0 0 0;
+  padding: 230px 0 0 0;
   color: #99702c;
   text-align: center;
   height: 340px;
@@ -78,11 +101,12 @@ html,body {
   display: flex;
   flex-direction: row;
   padding: 0 10px;
+  padding-bottom: 10px;
 }
 
 .detail {
   margin: 0 auto; 
-  max-width: 275px;
+  max-width: 260px;
   font-size: 18px;
 }
 
@@ -91,31 +115,63 @@ html,body {
 }
 
 .data {
-  padding: 10px 0 0 10px;
+  padding: 5px 0 0 10px;
 }
 
+@media only screen and (min-width : 320px) and (max-width : 480px) {
 
-@media screen and (max-width: 413px) {
   .center-content {
-    padding: 158px 0 0 0;
+    padding: 164px 0 0 0;
     color: #99702c;
     text-align: center;
     height: 398px;
   }
+
   .top-right-line {
-    height: 6px;
-    width: 778px;
-    /* box-shadow: 10px -10px 17px #f7be06; */
-    background: linear-gradient(to right, rgba(153, 112, 44, 100), rgba(153, 112, 44, 100));
+    height: 5px;
+    width: 809px;
+    background: linear-gradient(90deg, rgba(150,71,5,1) 0%, rgba(157,85,13,1)15%, rgba(255,158,21,1)60%,rgba(250,253,60,1)80%,rgba(254,169,62,1) 90%,rgba(239,167,65,1)100%);
     transform: translateX(-275px) rotate(45deg);
   }
+
   .bottom-left-line {
-    height: 6px;
+    height: 5px;
     width: 706px;
-    /* box-shadow: 10px 10px 17px #f7be06; */
-    background: linear-gradient(to right, rgba(153, 112, 44, 100), rgba(153, 112, 44, 100));
+    background: linear-gradient(90deg, rgba(150,71,5,1) 0%, rgba(157,85,13,1)10%, rgba(255,158,21,1)40%,rgba(250,253,60,1)50%,rgba(254,169,62,1) 70%,rgba(239,167,65,1)100%);
     transform: translateX(-143px) rotate(45deg);
+  }
+
+  
+  .detail {
+    margin: 0 auto;
+    max-width: 248px;
+    font-size: 18px;
   }
 }
 
+
+
+
+@media only screen and (max-width : 320px) {
+  .center-content {
+    padding: 148px 0 0 0;
+    color: #99702c;
+    text-align: center;
+    height: 398px;
+  }
+
+
+  .top-right-line {
+    height: 5px;
+    width: 768px;
+    background: linear-gradient(90deg, rgba(150,71,5,1) 0%, rgba(157,85,13,1)15%, rgba(255,158,21,1)60%,rgba(250,253,60,1)80%,rgba(254,169,62,1) 90%,rgba(239,167,65,1)100%);
+    transform: translateX(-275px) rotate(45deg);
+  }
+  
+}
+
+
+
+
+  
 
