--- a/Card-layout/layout-2/css/ccl0004.css
+++ b/Card-layout/layout-2/css/ccl0004.css
@@ -1,23 +1,37 @@
+/*layout-link: https://www.freepik.com/premium-vector/vertical-elegant-business-card-template_5247269.htm*/
+
+
+
+@font-face{font-family: customfonts;
+src: url(/fonts/raleway-light.ttf);}
+
+@font-face{font-family: customfonts1;
+  src: url(/fonts/BalooBhaina2-Regular.ttf);}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans', sans-serif;
+  
   overflow: hidden;
 }
+
 body {
   font-family: 'Nunito', sans-serif;
+  font-weight: 200px;
 }
+
 .main{
-  background-color:gray;
-  
+  background-color:gray;  
 }
+
+
 .container {
   max-width: 540px;
   margin: 0 auto;
   background-color: burlywood;
-  position: relative;
-  
+  position: relative;  
 }
+
 .top {
   background:#191919;
   height: 290px;
@@ -25,23 +39,34 @@ body {
   font-weight:300;
   text-align: center;
 }
-.top p {
-  padding: 45px 0;
+
+.top img {
+  padding: 45px 0 0 0;
   font-size: 30px;
 }
 
+img {
+  height: 100px;
+  display: block;
+  margin: 0 auto;
+}
+
 .user-name {
-  padding: 55px 0 0 0;
+  padding: 32px 0 0 0;
   text-transform: uppercase;
 }
 
 .user-name h1 {
-  font-size: 32px;
+  font-size: 28px;
   padding-bottom: 10px;
+  font-weight: 200;
+  font-family: customfonts;
 }
 
 .user-name h2 {
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: 200;
+  font-family: customfonts;
 }
 
 .user-name span {
@@ -49,18 +74,16 @@ body {
 }
 
 .social-link {
-width: 30px;
-height: 30px;
-background: #191919;
-border-radius: 50%;
-display: inline-block;
-color: #1c9772;
-font-size: 14px;
-text-align: center;
+  width: 30px;
+  height: 30px;
+  background: #191919;
+  border-radius: 50%;
+  color: #1c9772;
+  text-align: center;
   margin-right: 10px;
 }
 .bottom{
-  padding: 0px 30px  0 30px;
+  padding: 0px 20px  0 20px;
   background: #fff;
   /* color: #242e37;
   text-align: center; */
@@ -68,7 +91,7 @@ text-align: center;
   /* position: relative; */
 }
 .descrption {
-  padding-top: 50px;
+  padding-top: 70px;
   background-color: #e9e9e9;
   height: 385px;
 }
@@ -84,26 +107,32 @@ text-align: center;
   line-height: 20px;
   letter-spacing: 2px;
   margin-bottom: 20px;
-
-
 }
+
 .display{
   display: flex;
   flex-direction: row;
   /* padding: 0 10px; */
-  padding-bottom: 5px;
+  padding-bottom: 15px;
 }
+
+.display span {
+  padding-top: 1px;
+}
+
 .detail{
   margin: 0 auto; 
   max-width: 275px;
   font-size: 18px;
+  font-family: customfonts1;
 }
 
 .icon{
   padding: 10px;
 }
 .data{
-  padding: 10px;
+  padding: 5px 10px 10px 10px;
+  line-height: 1.5;
 }
 
 .triangle {
@@ -125,8 +154,8 @@ text-align: center;
 #triangle {
   width: 0;
   height: 0;
-  border-left: 233px solid transparent;
-  border-right: 245px solid transparent;
+  border-left: 251px solid transparent;
+  border-right: 251px solid transparent;
   border-top: 38px solid #29d9ad;
   position: absolute;
   top: 309px;
@@ -137,15 +166,115 @@ text-align: center;
 #triangle-inner {
   width: 0;
   height: 0;
-  border-left: 233px solid transparent;
-  border-right: 245px solid transparent;
-  border-top: 18px solid #248c75;
+  border-left: 251px solid transparent;
+  border-right: 251px solid transparent;
+  border-top: 20px solid #248c75;
   position: absolute;
-  top: 298px;
+  top: 300px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+
+
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  #triangle {
+    width: 0;
+    height: 0;
+    border-left: 168px solid transparent;
+    border-right: 168px solid transparent;
+    border-top: 33px solid #29d9ad;
+    position: absolute;
+    top: 306px;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+  
+  #triangle-inner {
+    width: 0;
+    height: 0;
+    border-left: 168px solid transparent;
+    border-right: 168px solid transparent;
+    border-top: 18px solid #248c75;
+    position: absolute;
+    top: 298px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .descrption {
+    padding-top: 50px;
+    background-color: #e9e9e9;
+    height: 385px;
+  }
+}
+
+/* @media only screen and (max-width: 414px) {
+  #triangle {
+    width: 0;
+    height: 0;
+    border-left: 188px solid transparent;
+    border-right: 188px solid transparent;
+    border-top: 33px solid #29d9ad;
+    position: absolute;
+    top: 306px;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+  #triangle-inner {
+    width: 0;
+    height: 0;
+    border-left: 188px solid transparent;
+    border-right: 188px solid transparent;
+    border-top: 18px solid #248c75;
+    position: absolute;
+    top: 298px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+} */
+
+@media only screen and (max-width : 320px) {
+  #triangle {
+    width: 0;
+    height: 0;
+    border-left: 144px solid transparent;
+    border-right: 144px solid transparent;
+    border-top: 33px solid #29d9ad;
+    position: absolute;
+    top: 307px;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+
+  #triangle-inner {
+    width: 0;
+    height: 0;
+    border-left: 144px solid transparent;
+    border-right: 144px solid transparent;
+    border-top: 18px solid #248c75;
+    position: absolute;
+    top: 298px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .display {
+    display: flex;
+    flex-direction: row;
+    /* padding: 0 10px; */
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .bottom {
+    padding: 0px 15px 0 15px;
+    background: #fff;
+    height: 385px;
+    /* position: relative; */
+  } 
+  
+}
 
 
 
