--- a/Card-layout/layout-4/css/ccl0008.css
+++ b/Card-layout/layout-4/css/ccl0008.css
@@ -52,14 +52,38 @@
 	border-image: linear-gradient(to right, red, pink);
 }
 
-.top ul {
-	width: 50%; 
+.wrappeer {
+	overflow: hidden;
 }
 
-.top ul li {
-	border-top: 1px solid black;
-	transform: translateY(-124px) rotate(45deg);
+.wrappeer2 {
+	overflow: hidden;
 }
+
+.verticle-line {
+  width: 1px;
+  min-height: 198px;
+  background: red;
+  margin: 4px;
+  float: left;
+}
+
+.verticle-line2 {
+  width: 1px;
+  min-height: 198px;
+  background: red;
+  margin: 4px;
+  float: right;
+}
+
+.verticle-line{
+	transform: translateY(-23px) rotate(-45deg);
+}
+
+.verticle-line2{
+	transform: translateY(-23px) rotate(45deg);
+}
+
 
 .description p {
 	font-size: 20px;
