--- a/Card-layout/CCL0031/css/ccl0031.css
+++ b/Card-layout/CCL0031/css/ccl0031.css
@@ -1,7 +1,9 @@
 html, body {
   font-family: 'Poppins', sans-serif;
-  color: #fefefe;
+  color: #626262;
+  font-weight: lighter;
   font-size: 14px;
+  background: black;
 }
 img {
   max-width: 100%;
@@ -12,6 +14,8 @@ img {
 }
 
 .main-container {
+  max-width: 540px;
+  margin: 0 auto;
 }
 
 .company-info-wrap {
@@ -47,7 +51,7 @@ img {
   font-size: 24px;
 }
 .person-position {
-  font-size: 18px;
+  font-size: 16px;
 }
 .icon img {
   max-width: 20px;
