--- a/Card-layout/CCL0008/css/ccl0008.css
+++ b/Card-layout/CCL0008/css/ccl0008.css
@@ -1,3 +1,10 @@
+/*https://befonts.com/stella-font.html*/
+/*https://www.ffonts.net/RodinBokutohPro-B.font.download*/
+@font-face{font-family: customfonts;
+src: url(/fonts/Nintendo\ Font\ \(Bold\).otf);}
+
+@font-face{font-family: numberfonts;
+src: url(/fonts/Semikolon\ Classic\ W03\ Bold.ttf);}
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +12,10 @@
 }
 
 html, body {
-  color: #a0a0a0;
+  color: #515151;
   font-size: 20px;
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
+  font-family: customfonts;
 }
 
 .main-container {
@@ -55,13 +62,13 @@ img {
 }
 
 .person-name {
-  font-size: 36px;
-
-  margin-bottom: 10px;
+  font-size: 34px;
+  color: #aaaaaa;
 }
 
 .person-position {
   font-size: 26px;
+  color: #aaaaaa;
 }
 
 .person-contact-wrap {
@@ -72,6 +79,7 @@ img {
   background: #e9e9e9;
   padding: 40px 0;
   width: 100% ;
+  font-family: numberfonts;
 }
 
 
@@ -97,11 +105,15 @@ img {
 
 .person-social-description {
   text-align: center;
+  max-width: 250px;
+    margin: 0 auto;
+
+  
 }
 
 .social-link img  {
   height: 25px;
-  margin-top: 6px;
+  margin-top: 7px;
   margin-bottom: 4px;
 }
 
@@ -127,3 +139,26 @@ img {
   transform: translate(-50%, -50%);
 }
 
+
+@media screen and (max-width: 768px){
+  #triangle {
+    border-left: 140px solid transparent;
+    border-right: 140px solid transparent;
+    border-top: 40px solid #29d9ad;
+    position: absolute;
+    top: 370px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#triangle-inner {
+  width: 0;
+  height: 0;
+  border-left: 138px solid transparent;
+  border-right: 138px solid transparent;
+  border-top: 20px solid #248c75;
+  position: absolute;
+  top: 360px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+}
