--- a/Card-layout/CCL0031/css/ccl0031.css
+++ b/Card-layout/CCL0031/css/ccl0031.css
@@ -41,6 +41,9 @@ img {
   text-align: center;
 }
 
+.icon{
+  background: red;
+}
 .person-info {
   background-color: #2f2f2f;
   padding: 25px 15px;
